<resources>

    <string name="app_name">SAFEnhancer Lite</string>

    <string name="copy_dialog_message">Processing file…</string>

    <string name="camera_chooser_dialog_title">Choose camera application</string>
    <string name="remember_this_choice">Remember this choice</string>

    <string name="preferred_camera">Preferred camera</string>
    <string name="preferred_camera_clear">Clear default value</string>

    <string name="toast_cleared">Cleared.</string>

    <string name="handled_apps">Apps handled by Document UI</string>
    <string name="handled_apps_choose_apps">Choose apps</string>
    <string name="handled_apps_choose_apps_summary">Wechat and %d more applications</string>
    <string name="handled_apps_what_apps_can_use_it">What apps can use it?</string>
    <string name="handled_apps_what_apps_can_use_it_summary"><![CDATA[
Apps that will call system chooser to take photos can be handled by SAFEnhancer.
If they use their own interface only, it will have no effect even if apps are chosen in list.
    ]]></string>

    <string name="action_done">Done</string>
    <string name="packages_selector_search_hint">Search title/package name…</string>

    <string name="isolated_storage_support_title">Isolated (Scoped) storage support</string>
    <string name="isolated_storage_support_for_sr">Enable "Storage Redirect" support</string>
    <string name="isolated_storage_support_for_sr_summary"><![CDATA[
If apps handled by SAFEnhancer is controlled by Storage Redirect and you cannot choose images
normally, you need enable this feature.
    ]]></string>
    <string name="isolated_storage_support_for_q">Enable Stock Scoped storage support</string>
    <string name="isolated_storage_support_for_q_summary_disabled"><![CDATA[
This feature is enabled for Android Q+ devices only.
    ]]></string>
    <string name="isolated_storage_support_for_q_summary_enabled"><![CDATA[
If your device is running on Android Q+, you may need to enable this feature to fix problems
that some apps cannot receive pictures normally.
    ]]></string>
    <string name="isolated_storage_support_for_q_summary_checked"><![CDATA[
You have enabled this feature. Current root documents tree uri: %s
    ]]></string>
    <string name="isolated_storage_support_for_q_dialog_title">Enable support</string>
    <string name="isolated_storage_support_for_q_dialog_message"><![CDATA[
Now we will open Documents UI to pick root storage. Please be sure to choose the real root storage!
    ]]></string>
    <string name="handled_apps_what_apps_can_use_it_wrong_path_dialog_title">Warning</string>
    <string name="handled_apps_what_apps_can_use_it_wrong_path_dialog_message">The path you picked seems not to be correct. If you confirm it\'s a correct path to root storage, you can ignore it.</string>

    <string name="action_camera">Camera</string>
    <string name="action_documents">Documents</string>

    <string name="about_title">About</string>
    <string name="version_format">%1$s (%2$d)</string>
    <string name="github_title">GitHub repository</string>
    <string name="github_url" translatable="false"><![CDATA[
https://github.com/fython-tools/DocUIProxy-Android
    ]]></string>

    <string name="storage_permission_pref_title">Storage permission required</string>
    <string name="storage_permission_pref_summary"><![CDATA[
If you see this option, it means you haven\'t grant storage permission to SAF Enhancer Lite.
For Android pre-Q users, you should click this option to request permission. For Android Q+ users,
please enable Stock Scoped storage support.
    ]]></string>
    <string name="storage_permission_dialog_failed_title">Storage permission required</string>
    <string name="storage_permission_dialog_failed_message"><![CDATA[
Permission request was denied. SAF Enhancer Lite may not work properly without storage permission
before Android Q.
    ]]></string>

</resources>
